[package]
name = "prettyjson"
version = "0.1.2"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "PrettyJSON"
repository = "https://github.com/jht5945/prettyjson"
license = "MIT"

[dependencies]
argparse = "0.2.2"
json = "0.11.14"
term = "0.5.2"
rust_util = "0.6.3"
